[metadata]
name = sigoptlite_test_package
version = 0.1.1
description = In memory driver for SigOpt
license = Apache-2.0
url = https://sigopt.org
maintainer = SigOpt
maintainer_email = support@sigopt.com
long_description = In memory driver for SigOpt
classifiers =
  Development Status :: 4 - Beta

[options]
python_requires = >=3.10
packages = find:
install_requires = 
  numpy==1.22.4
  scipy==1.7.3
  qmcpy==1.2
  jsonschema==3.0.1

[options.packages.find]
exclude= 
  sigoptlitetest*
